fixed spacing on workout details

--- a/client/src/pages/AddEvent/AddWorkoutDetails.scss
+++ b/client/src/pages/AddEvent/AddWorkoutDetails.scss
@@ -11,7 +11,7 @@
     .list {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        //align-items: center;
         width: 85%;
         height: 90%;
         overflow-y: scroll;
